data/Tests/Lua/System/Fail/DebugNotify/Main.(DeveloperAddon).xdb
<?xml version="1.0" encoding="UTF-8" ?>
<DeveloperAddon>
	<scriptFileRefs>
		<Item href="/Tests/Lua/Lib/Timer.lua" />
		<Item href="/Tests/Lua/Lib/Log.lua" />
		<Item href="/Tests/Lua/Lib/ExitTest.lua" />
		<Item href="/Tests/Lua/Lib/Login.lua" /><Item href="/Tests/Lua/Lib/GlobalParams.lua" />
		<Item href="Script.lua" />
	</scriptFileRefs>
</DeveloperAddon>
